--- a/.github/workflows/testsonar.yml
+++ b/.github/workflows/testsonar.yml
@@ -8,7 +8,7 @@ jobs:
     uses: ryelduit/testworkflow/.github/workflows/blank.yml@main
     with:
       repocheckout: ${{ github.repository }}
-      projdir: cli
+      projdir: cloud/test
     secrets:
       sonartoken: ${{ secrets.SONAR_TOKEN }}
       
